@@ -1,3 +1,9 @@
+2002-09-21  Per Bothner  <per@bothner.com>
+
+	* AliasConstraint.java (followAliases):  New static helper method.
+
+	* MethodProc.java (match(Object[])):  Removed method.
+
 2002-07-25  Per Bothner  <per@bothner.com>
 
 	* WrongArguments.java (checkArgCount): Split into two overloaded
